force-app/main/default/objects/Category_Mapping__c/Category_Mapping__c.object-meta.xml
<CustomObject>
    <label>Category Mapping</label>
    <nameField>
        <displayFormat>CM-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Category Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>