force-app/main/default/objects/Category_Mapping__c/fields/Board__c.field-meta.xml
<CustomField>
    <fullName>Board__c</fullName>
    <label>Board</label>
    <referenceTo>Board__c</referenceTo>
    <relationshipLabel>Category Mappings</relationshipLabel>
    <relationshipName>Category_Mappings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>