force-app/main/default/objects/Category_Mapping__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>This is the category to apply to a card when conditions are met.</description>
    <inlineHelpText>This is the category to apply to a card when conditions are met.</inlineHelpText>
    <label>Category</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>