force-app/main/default/objects/Category_Mapping__c/fields/Color__c.field-meta.xml
<CustomField>
    <fullName>Color__c</fullName>
    <description>If type is color, and a card matches, then consensus category on card with be set to this category.</description>
    <inlineHelpText>If type is color, and a card matches, then consensus category on card with be set to this category.</inlineHelpText>
    <label>Color</label>
    <length>20</length>
    <type>Text</type>
</CustomField>