force-app/main/default/objects/Category_Mapping__c/fields/Max_X_Position__c.field-meta.xml
<CustomField>
    <fullName>Max_X_Position__c</fullName>
    <description>If type is intent, this conditions needs to be met in order to set the card intent category to this category.</description>
    <inlineHelpText>If type is intent, this conditions needs to be met in order to set the card intent category to this category.</inlineHelpText>
    <label>Max X Position</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>