force-app/main/default/objects/Category_Mapping__c/fields/Max_Y_Position__c.field-meta.xml
<CustomField>
    <fullName>Max_Y_Position__c</fullName>
    <label>Max Y Position</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>