force-app/main/default/objects/Category_Mapping__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>This indicates the type of mapping to apply. For example, color or bounding box.</description>
    <inlineHelpText>This indicates the type of mapping to apply. For example, color or bounding box.</inlineHelpText>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bounding Box</fullName>
            </value>
            <value>
                <fullName>Color</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>